--- a/wappskafander_t1/src/web_root/index.html
+++ b/wappskafander_t1/src/web_root/index.html
@@ -134,14 +134,13 @@
     one updates plain HTML or JavaScript.<br />
     <br />
     An introduction:<br />
+    <a href=http://www.metacafe.com/watch/9687437/wappskafander_t1_introduction/">
+    http://www.metacafe.com/watch/9687437/wappskafander_t1_introduction/</a><br />
     <br />
-    <iframe width="840" height="630" src=
-    "http://www.youtube.com/embed/1zS6S5bADZ0" frameborder="0" allowfullscreen=
-    ""></iframe><br />
+<br />
     Project repository:<br />
     <a href=
     "https://github.com/martinvahi/wappskafander_t1">https://github.com/martinvahi/wappskafander_t1</a><br />
-
     <br />
 
     <div id="for_javascript"></div>
