--- a/wappskafander_t1/src/web_root/index.html
+++ b/wappskafander_t1/src/web_root/index.html
@@ -134,7 +134,7 @@
     one updates plain HTML or JavaScript.<br />
     <br />
     An introduction:<br />
-    <a href=http://www.metacafe.com/watch/9687437/wappskafander_t1_introduction/">
+    <a href="http://www.metacafe.com/watch/9687437/wappskafander_t1_introduction/">
     http://www.metacafe.com/watch/9687437/wappskafander_t1_introduction/</a><br />
     <br />
 <br />
